@@ -22,10 +22,14 @@ public class DBUtilities {
     //private static int which;
 
     /**
-     * Method to create Connection to database
-     * <br>Assumes existence of Cockatoos database 
-     * with userID of itp220 and password of itp220
-     * @return Returns Connection to database
+     * Creates a connection to a mySQL database using a JDBC driver. Assumes 
+     *  the existence of Cockatoos database with the correct user name and 
+     *  password. See readme.md document for instructions on how to properly
+     *  set up database.
+     * @return Connection con  Connection to database
+     * @exception Exception if an error occurs loading the JDBC driver
+     * @see Connection
+     * @see DriverManager#getConnection(String, String, String)     
      */
     public static Connection createConnection() {
         Connection con = null;
@@ -37,7 +41,7 @@ public class DBUtilities {
         String url = "jdbc:mysql://localhost:3306/cockatoos";
 
         try { // load the driver 
-            Class.forName(driver).newInstance();
+            Class.forName(driver).getDeclaredConstructor().newInstance();
             con = DriverManager.getConnection(url, user, pass);
         } catch (Exception e) { // problem loading driver, class not exist?
             e.printStackTrace();
@@ -46,8 +50,12 @@ public class DBUtilities {
     }
 
     /**
-     * Method to close existing Connection to database
-     * @param Connection con  Connection to the database 
+     * Closes existing connection to database. Assumes connection has already
+     *  been made. If no connection has been made this method will not do anything.
+     * @param Connection con  Connection to the database
+     * @exception SQLException If an error occurs closing a Connection or Statement
+     * @see Connection
+     * @see Statement
      */
     public static void closeConnection(Connection con) {
         if (con != null) {
@@ -61,11 +69,13 @@ public class DBUtilities {
     }
 
     /**
-     * Method to check for existing Connection to database
-     * 		If connection doesn't exist call createConnection()
+     * Checks for existing connection to database. If connection doesn't exist 
+     *  calls createConnection(). Also creates a SQL Statement object.
      * @param Connection con  Connection to the database 
-     * @see createConnection()
-     * @return Returns Connection con  Connection to the database
+     * @return Connection con  Connection to the database
+     * @exception SQLException If an error occurs creating the Statement
+     * @see #createConnection()
+     * @see Connection#createStatement()
      */
     public static Connection checkConnect(Connection con) {
         if (con == null) { con = createConnection(); }
